welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:41: error: not found: value N
	avanceNbPas(N)
                    ^