welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
var c1:Color = Color.YELLOW
faireV(c1)
var c2:Color = Color.RED
faireV(c2)
var c3:Color = Color.BLUE
faireV(c3)
var c4:Color = Color.PINK
faireV(c4)
}

def faireV(c:Color) {//V d'une certaine couleur
	avance()
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	recule()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
}

def avanceNbPas(N:Int) {//avance de N pas
	for(i<- 1 to N){
		avance()
	}
}


def gaucheAvance(GA:Int) {//regard a gauche et avance de GA pas
	gauche()
	avanceNbPas(N)
	
}
